<package format="2">

    <name>advent_of_code_2019</name>
    <version>1.0.0</version>
  
    <description>
      A ROS package that encapsulates the Advent of Code 2019 challenges.
    </description>
  
    <maintainer email="joshua.olds@outlook.com">Josh Olds</maintainer>
  
    <author email="joshua.olds@outlook.com">Josh Olds</author>
  
    <license>TODO</license>
  
    <url type="website">TODO</url>
    <url type="repository">TODO</url>
    <url type="bugtracker">TODO</url>
  
    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>roscpp</depend>
    <depend>roslib</depend>
    
    <export>
    </export>
  
  </package>